[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "texture-map-toolbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "colour-science>=0.4.7",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "pyqtgraph>=0.14.0",
    "PySide6>=6.11.0",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
]

[project.scripts]
texture-map-toolbox = "texture_map_toolbox.__main__:main"
